Contribution allocation engine, source sliders, dollar input; Core AI, server, UI audits
- Add sourceAllocationEngine: rebalanceSources, locked sources, 100% total
- Contribution page: sliders with track fill for Pre-tax/Roth/After-tax
- Dollar input in front for source allocation when in $ view
- Main contribution: dollars/yr first, percentage input after
- Core AI server, intent resolver, retirement service, migrations
- Enrollment, dashboard, auth, hero, and docs updates

Made-with: Cursor

--- a/src/locales/en/common.json
+++ b/src/locales/en/common.json
@@ -1,13 +1,18 @@
 {
   "dashboard": {
     "greeting": "Good Morning, {{name}}",
+    "greetingMorning": "Good Morning",
+    "greetingAfternoon": "Good Afternoon",
+    "greetingEvening": "Good Evening",
+    "greetingWelcomeBack": "Welcome Back",
     "heroTitle": "Let's build your future, together.",
     "heroTitlePart1": "Let's build your",
     "heroTitlePart2": "future, together.",
     "heroSubtitle": "You're one step away from activating your 401(k). We've simplified everything so you can focus on what matters.",
-    "startEnrollment": "Start My Enrolment",
-    "exploreOptions": "Explore My Options",
-    "enrollmentOpen": "Enrolment Window Open",
+    "startEnrollment": "Start My Enrollment",
+    "exploreOptions": "Know more about enrollment",
+    "takesMinutes": "Takes 3 minutes",
+    "enrollmentOpen": "Enrollment Window Open",
     "projectedFutureValue": "Projected Future Value",
     "learningResources": "Learning Resources",
     "scrollToExplore": "Scroll to explore",
@@ -148,19 +153,19 @@
     "retirementScore": "Retirement Score",
     "employerMatchCardDesc": "Your employer will match your contributions. Don't leave free money on the table!",
     "matchAvailable": "{{percent}}% match available",
-    "enrollmentStatus": "Enrolment Status",
+    "enrollmentStatus": "Enrollment Status",
     "notYetEnrolled": "Not Yet Enrolled",
     "enrollmentStatusDesc": "You're eligible to start your retirement savings today.",
-    "autoEnrollment": "Auto-Enrolment",
+    "autoEnrollment": "Auto-Enrollment",
     "active": "Active",
     "inactive": "Inactive",
     "autoEnrollmentDescActive": "You'll be automatically enrolled in 30 days if you don't take action.",
-    "autoEnrollmentDescInactive": "Manual enrolment required.",
+    "autoEnrollmentDescInactive": "Manual enrollment required.",
     "readyToStartTitle": "Ready to start your retirement journey?",
     "readyToStartDesc": "At age {{age}}, starting now gives you over {{years}} years of compound growth. Even a small contribution can grow significantly over time.",
-    "startEnrollmentButton": "Start Enrolment",
+    "startEnrollmentButton": "Start Enrollment",
     "badge": "Demo — {{scenario}}",
-    "scenario_pre_enrollment": "Pre-Enrolment",
+    "scenario_pre_enrollment": "Pre-Enrollment",
     "scenario_new_enrollee": "New Enrollee",
     "scenario_young_accumulator": "Young Accumulator",
     "scenario_mid_career": "Mid-Career",
@@ -182,8 +187,10 @@
   },
   "nav": {
     "dashboard": "Dashboard",
-    "enrollment": "Enrolment",
+    "enrollment": "Enrollment",
+    "retirementPlan": "Retirement Plan",
     "profile": "Profile",
+    "account": "My Profile",
     "settings": "Settings",
     "transactions": "Transactions",
     "accountStatements": "Account Statements",
@@ -741,8 +748,8 @@
     "resetPasswordDesc": "Your password must be at least 8 characters long and include a mix of letters, numbers, and special characters."
   },
   "enrollment": {
-    "managementTitle": "Enrolment Management",
-    "managementDescription": "View and manage your retirement plan enrolments",
+    "managementTitle": "Enrollment Management",
+    "managementDescription": "View and manage your retirement plan enrollments",
     "filterByStatus": "Filter by status",
     "filterAll": "All",
     "filterEnrolled": "Enrolled",
@@ -758,10 +765,18 @@
     "planId": "Plan ID",
     "currentBalance": "Current Balance",
     "selectPlanTitle": "Select your retirement plan",
+    "choosePlanHeading": "Take the first step toward retirement.",
+    "choosePlanSubtitle": "You are making a great move just by starting. Here is the plan provided to help you build lasting wealth.",
     "selectPlanSubtitle": "Choose an option to see how it affects your future savings.",
     "needHelpDeciding": "Need help deciding? Our advisors are available to discuss which plan is right for your financial goals.",
     "scheduleConsultation": "Schedule a consultation",
     "continueToContributions": "Continue to Contributions",
+    "continueWithPlan": "Continue with {{planName}}",
+    "selectPlan": "Select Plan",
+    "askAiAboutPlan": "Ask AI about this plan",
+    "learnMoreAboutPlan": "Learn more about {{planName}}",
+    "aiInfo": "AI info",
+    "planInfoAskDetailed": "Ask for detailed explanation →",
     "stepperPlan": "Plan",
     "stepperContribution": "Contribution",
     "stepperAutoIncrease": "Auto Increase",
@@ -772,7 +787,7 @@
     "footerSaveAndExit": "Save & Exit",
     "footerBackAria": "Back to previous step",
     "footerBackDisabledAria": "Back (disabled on first step)",
-    "footerAria": "Enrolment step actions",
+    "footerAria": "Enrollment step actions",
     "selectPlanToSeeDetails": "Select a plan to see details.",
     "planUnavailable": "Plan Unavailable",
     "planNotAvailableDefault": "This plan is not available for your current profile.",
@@ -831,12 +846,12 @@
     "rationaleRothAge": "Based on your age and retirement timeline, a Roth 401(k) can offer strong long-term tax-free growth.",
     "rationaleTradHighSalary": "With your current salary, reducing taxable income now with pre-tax contributions can lower your tax bill today.",
     "rationaleTradDefault": "A traditional 401(k) can help lower your taxable income now while you save for retirement.",
-    "designSavingsTitle": "Design your savings strategy",
-    "designSavingsSubtitle": "Small increases today can create life-changing impact tomorrow.",
-    "howMuchContribute": "How much do you want to contribute?",
+    "designSavingsTitle": "Make the most of your paycheck.",
+    "designSavingsSubtitle": "Your contribution rate shapes your retirement outcome. Choose the level that aligns with your goals.",
+    "howMuchContribute": "How much do you wish to contribute?",
     "quickPresets": "Quick presets:",
     "presetEmployerMatch": "Employer match 6%",
-    "presetSafe": "Safe: 8%",
+    "presetSafe": "Safe: 4%",
     "presetAggressive": "Aggressive: 15%",
     "matchZone": "{{percent}}% match zone",
     "monthlyContributionSummary": "Monthly contribution: {{amount}}",
@@ -899,7 +914,7 @@
     "perMonthPreTaxNote": "{{amount}}/month. Pre-tax deduction lowers your taxable income.",
     "contributionPercentageAria": "Contribution percentage",
     "annualContributionAria": "Annual contribution amount",
-    "dollarPerYear": "$/yr",
+    "dollarPerYear": "/yr",
     "noData": "No data",
     "yearLabel": "Year {{year}}",
     "moreLabel": "more",
@@ -955,7 +970,7 @@
     "fundsSelected": "{{count}} funds selected",
     "total": "Total: {{percent}}%",
     "termsAndConditions": "Terms and Conditions",
-    "acceptTerms": "Please accept the terms to enable enrolment.",
+    "acceptTerms": "Please accept the terms to enable enrollment.",
     "termsAndConditionsAgree": "By proceeding, you agree to comply with the plan rules and applicable regulations. You understand that investments involve market risk and that you are responsible for your allocation and contribution decisions.",
     "acceptTermsCheckbox": "I agree",
     "feeDisclosureStatement": "Fee Disclosure Statement",
@@ -993,7 +1008,7 @@
     "allocationMustTotal": "Allocation must total 100%",
     "readyToSubmit": "Ready to submit",
     "successModalTitle": "Congratulations, You're all set!",
-    "successModalMessage": "Your enrolment has been successfully confirmed.",
+    "successModalMessage": "Your enrollment has been successfully confirmed.",
     "successModalOkay": "Okay",
     "successModalViewPlan": "View plan details",
     "insightIncreasePreTax": "Increase pre-tax contribution",
@@ -1237,7 +1252,7 @@
     "employerMatch": "Employer Match",
     "marketGrowth": "Market Growth",
     "enrolledPlans": "Enrolled Plans",
-    "manageEnrollments": "Manage Enrolments",
+    "manageEnrollments": "Manage Enrollments",
     "balance": "Balance",
     "ytdReturn": "YTD Return",
     "contribution": "Contribution",
