--- a/src/locales/en/enrollment.json
+++ b/src/locales/en/enrollment.json
@@ -1,6 +1,6 @@
 {
-  "managementTitle": "Enrolment Management",
-  "managementDescription": "View and manage your retirement plan enrolments",
+  "managementTitle": "Enrollment Management",
+  "managementDescription": "View and manage your retirement plan enrollments",
   "filterAll": "All",
   "filterEnrolled": "Enrolled",
   "filterEligible": "Eligible",
@@ -15,7 +15,15 @@
   "planId": "Plan ID",
   "currentBalance": "Current Balance",
   "selectPlanTitle": "Select your retirement plan",
+  "choosePlanHeading": "Take the first step toward retirement.",
+  "choosePlanSubtitle": "You are making a great move just by starting. Here is the plan provided to help you build lasting wealth.",
   "selectPlanSubtitle": "Choose an option to see how it affects your future savings.",
+  "continueWithPlan": "Continue with {{planName}}",
+  "selectPlan": "Select Plan",
+  "askAiAboutPlan": "Ask AI about this plan",
+  "learnMoreAboutPlan": "Learn more about {{planName}}",
+  "aiInfo": "AI info",
+  "planInfoAskDetailed": "Ask for detailed explanation →",
   "needHelpDeciding": "Need help deciding? Our advisors are available to discuss which plan is right for your financial goals.",
   "scheduleConsultation": "Schedule a consultation",
   "continueToContributions": "Continue to Contributions",
@@ -76,12 +84,12 @@
   "planSafeHarborBenefit1": "Immediate vesting",
   "planSafeHarborBenefit2": "Guaranteed match",
   "planSafeHarborBenefit3": "No discrimination testing",
-  "designSavingsTitle": "Design your savings strategy",
-  "designSavingsSubtitle": "Small increases today can create life-changing impact tomorrow.",
-  "howMuchContribute": "How much do you want to contribute?",
+  "designSavingsTitle": "Make the most of your paycheck.",
+  "designSavingsSubtitle": "Your contribution rate shapes your retirement outcome. Choose the level that aligns with your goals.",
+  "howMuchContribute": "How much do you wish to contribute?",
   "quickPresets": "Quick presets:",
   "presetEmployerMatch": "Employer match 6%",
-  "presetSafe": "Safe: 8%",
+  "presetSafe": "Safe: 4%",
   "presetAggressive": "Aggressive: 15%",
   "matchZone": "{{percent}}% match zone",
   "monthlyContributionSummary": "Monthly contribution: {{amount}}",
@@ -164,7 +172,7 @@
   "fundsSelected": "{{count}} funds selected",
   "total": "Total: {{percent}}%",
   "termsAndConditions": "Terms and Conditions",
-  "acceptTerms": "Please accept the terms to enable enrolment.",
+  "acceptTerms": "Please accept the terms to enable enrollment.",
   "termsAndConditionsAgree": "By proceeding, you agree to comply with the plan rules and applicable regulations. You understand that investments involve market risk and that you are responsible for your allocation and contribution decisions.",
   "acceptTermsCheckbox": "I agree",
   "feeDisclosureStatement": "Fee Disclosure Statement",
