--- a/src/locales/es/common.json
+++ b/src/locales/es/common.json
@@ -1,12 +1,17 @@
 {
   "dashboard": {
     "greeting": "Buenos días, {{name}}",
+    "greetingMorning": "Buenos días",
+    "greetingAfternoon": "Buenas tardes",
+    "greetingEvening": "Buenas noches",
+    "greetingWelcomeBack": "Bienvenido de nuevo",
     "heroTitle": "Construyamos tu futuro, juntos.",
     "heroTitlePart1": "Construyamos tu",
     "heroTitlePart2": "futuro, juntos.",
     "heroSubtitle": "Estás a un paso de activar tu 401(k). Lo hemos simplificado todo para que te enfoques en lo que importa.",
     "startEnrollment": "Iniciar mi inscripción",
-    "exploreOptions": "Explorar mis opciones",
+    "exploreOptions": "Saber más sobre la inscripción",
+    "takesMinutes": "Toma 3 minutos",
     "enrollmentOpen": "Período de inscripción abierto",
     "projectedFutureValue": "Valor futuro proyectado",
     "learningResources": "Recursos de aprendizaje",
@@ -177,7 +182,10 @@
   "nav": {
     "dashboard": "Panel",
     "enrollment": "Inscripción",
+    "retirementPlan": "Plan de jubilación",
     "profile": "Perfil",
+    "account": "Mi perfil",
+    "settings": "Ajustes",
     "transactions": "Transacciones",
     "accountStatements": "Estados de cuenta",
     "logOut": "Cerrar sesión",
