--- a/src/locales/en/dashboard.json
+++ b/src/locales/en/dashboard.json
@@ -4,9 +4,9 @@
   "heroTitlePart1": "Let's build your",
   "heroTitlePart2": "future, together.",
   "heroSubtitle": "You're one step away from activating your 401(k). We've simplified everything so you can focus on what matters.",
-  "startEnrollment": "Start My Enrolment",
-  "exploreOptions": "Explore My Options",
-  "enrollmentOpen": "Enrolment Window Open",
+  "startEnrollment": "Start My Enrollment",
+  "exploreOptions": "Know more about enrollment",
+  "enrollmentOpen": "Enrollment Window Open",
   "learningResources": "Learning Resources",
   "meetAdvisors": "Want help choosing a plan? Meet our advisors.",
   "whyChoosePlan": "Why Choose Our Plan",
@@ -28,17 +28,17 @@
     "retirementScore": "Retirement Score",
     "employerMatchCardDesc": "Your employer will match your contributions. Don't leave free money on the table!",
     "matchAvailable": "{{percent}}% match available",
-    "enrollmentStatus": "Enrolment Status",
+    "enrollmentStatus": "Enrollment Status",
     "notYetEnrolled": "Not Yet Enrolled",
     "enrollmentStatusDesc": "You're eligible to start your retirement savings today.",
-    "autoEnrollment": "Auto-Enrolment",
+    "autoEnrollment": "Auto-Enrollment",
     "active": "Active",
     "inactive": "Inactive",
     "autoEnrollmentDescActive": "You'll be automatically enrolled in 30 days if you don't take action.",
     "autoEnrollmentDescInactive": "Manual enrollment required.",
     "readyToStartTitle": "Ready to start your retirement journey?",
     "readyToStartDesc": "At age {{age}}, starting now gives you over {{years}} years of compound growth. Even a small contribution can grow significantly over time.",
-    "startEnrollmentButton": "Start Enrolment"
+    "startEnrollmentButton": "Start Enrollment"
   },
   "preEnrollment": {
     "learnAtYourPace": "Learn at your pace",
